Certificate generated,phone number field edited in Student app

--- a/admission/templates/admission/admission_form.html
+++ b/admission/templates/admission/admission_form.html
@@ -245,13 +245,13 @@
 {% endblock %}
 {% block extra_js_lib %}
 <!--     &lt;!&ndash; Jquery Validation Plugin Css &ndash;&gt;-->
-<!--    <script src="{% static 'plugins/jquery-validation/jquery.validate.js' %}"></script>-->
+    <script src="{% static 'plugins/jquery-validation/jquery.validate.js' %}"></script>
 
 <!--    &lt;!&ndash; JQuery Steps Plugin Js &ndash;&gt;-->
-<!--    <script src="{% static 'plugins/jquery-steps/jquery.steps.js' %}"></script>-->
+    <script src="{% static 'plugins/jquery-steps/jquery.steps.js' %}"></script>
 
 <!--    &lt;!&ndash; Sweet Alert Plugin Js &ndash;&gt;-->
-<!--    <script src="{% static 'plugins/sweetalert/sweetalert.min.js' %}"></script>-->
+    <script src="{% static 'plugins/sweetalert/sweetalert.min.js' %}"></script>
 
 <!--    &lt;!&ndash; Custom Js &ndash;&gt;-->
 <!--    <script src="{% static 'js/pages/forms/form-validation.js' %}"></script>-->
