--- a/users/templates/users/layout1.html
+++ b/users/templates/users/layout1.html
@@ -262,6 +262,22 @@
 
                         </ul>
                     </li>
+
+                    <li>
+                        <a href="javascript:void(0);" class="menu-toggle">
+                            <i class="material-icons">people</i>
+                            <span>Certificate</span>
+                        </a>
+                        <ul class="ml-menu">
+                            <li>
+                                <a href="{% url 'certificate-new' %}">Add Certificate</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'certificate-list' %}">Certificate List</a>
+                            </li>
+
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <!-- #Menu -->
