--- a/certificate/templates/certificate/Certificate_confirm_delete.html
+++ b/certificate/templates/certificate/Certificate_confirm_delete.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "users/layout1.html" %}
+{% block body %}
+<form method="post">
+    {% csrf_token %}
+    <table class="table table-bordered table-striped table-hover dataTable js-exportable" id="DataTables_Table_1" role="grid" aria-describedby="DataTables_Table_1_info">
+                                    <thead>
+                                        <tr role="row">
+                                            <th>Date</th>
+                                            <th>Admission</th>
+                                            <th>Photo</th>
 
-</body>
-</html>
+                                    </thead>
+
+                                  <tbody>
+                                        <tr>
+                                            <td>{{object.date }}</td>
+                                            <td>{{object.admission }}</td>
+                                            <td>{{object.photo }}</td>
+
+                                        </tr>
+                                  </tbody>
+                                </table>
+
+    <p>Are you sure you want to delete ?</p>
+    <input type="submit" value="Confirm" class="text-danger">
+    <a href="{% url 'course-list' %}" class="text-success">Cancel</a>
+</form>
+{% endblock %}
