Final Project(Completed)

--- a/certificate/templates/certificate/Certificate_confirm_delete.html
+++ b/certificate/templates/certificate/Certificate_confirm_delete.html
@@ -23,6 +23,6 @@
 
     <p>Are you sure you want to delete ?</p>
     <input type="submit" value="Confirm" class="text-danger">
-    <a href="{% url 'course-list' %}" class="text-success">Cancel</a>
+    <a href="{% url 'certificate-list' %}" class="text-success">Cancel</a>
 </form>
 {% endblock %}
